# CastleSiegeEvolutionaryAlgorithm

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cec17.c  main.cpp  testrandom.cc
inc/: castle.h  csea.h  knight.h
src/: castle.cpp  csea.cpp  knight.cpp
